@@ -1,4 +1,9 @@
 2008-11-29 Aaron Faupell <afaupell@users.sourceforge.net>
+	* ipentry.tcl: use -takefocus instead of tab bindings.
+	this works in reverse circulation too. also a fix when
+	unsetting the textvariable
+
+2008-11-29 Aaron Faupell <afaupell@users.sourceforge.net>
 
 	* ipentry.tcl: add ipentry6 widget for IPv6 addresses
 	* ipentry.man: document ipentry6
